# SingletScalar_DM

./: .buildinfo  .gitignore  CITATION.bib  Example.ipynb  LICENSE  README.md  genindex.html  include.py  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  singletscalar_dm.html  utils.py
DATA/: DRAKE_omega_fBE_QCDA_paper.txt  SHP_sigmav_bb.txt  SHP_sigmav_table.txt  SHP_sigmav_tautau.txt
_downloads/0cba3291d97ffe0d3be515fbd367188f/: plot_indirect_detection_GCE.py
_downloads/1f7ee526d82b08d9095163edd00aa58f/: plot_collider_searches.py
_downloads/22176386651118756967049e31907fce/: plot_relic_density.ipynb
_downloads/2d9e236f38e7e340b95cd1fca5a711d1/: plot_direct_detection.ipynb
_modules/singletscalar_dm/: _globals.html
docs/: Makefile
doctrees/: codeautolink-cache.json  environment.pickle  index.doctree  modules.doctree  singletscalar_dm.doctree
examples/: README.rst  plot_annihilation_cross_section.py  plot_collider_searches.py  plot_direct_detection.py  plot_indirect_detection.py  plot_indirect_detection_GCE.py  plot_relic_density.py  plot_source_spectra.py
examples_gallery/: index.html  plot_annihilation_cross_section.html  plot_collider_searches.html  plot_direct_detection.html  plot_indirect_detection_GCE.html  plot_relic_density.html  plot_source_spectra.html
html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js  singletscalar_dm.html
src/: __init__.py  _functions.py  _globals.py
tests/: script_test_relicdensity.py  script_test_sigmav.py  script_test_spectra.py
(+921 files in other folders)
