[metadata]
name = SingletScalar-DM
version = 1.0.0
author = Mattia Di Mauro
author_email = dimauro.mattia@gmail.com
description = Calculate cross sections, relic density and source spectra for the singlet scalar model of dark matter.
long_description = file: README.md, LICENCE
licence = MIT
classifiers =
    Development Status :: 6 - Mature
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.10
install_requires =
    numpy
    scipy
    matplotlib

[options.packages.find]
where = src

[options.package_data]
* = 
    data/*.dat

[options.extras_require]
docs =
    sphinx
    sphinx-codeautolink
    sphinx-gallery
    pydata-sphinx-theme

testing =
    pytest
